turtleart.square.Square.scala.error
Compilation error:
Square:5: error: ')' expected but ';' found.
    right(90;)
            ^Square:5: error: illegal start of statement
    right(90;)
             ^